--- a/Solution/WEBAPP/Views/Curso/Create.cshtml
+++ b/Solution/WEBAPP/Views/Curso/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Entity.Notas
+﻿@model Core.Entity.Curso
 
 @{
     ViewData["Title"] = "Create";
@@ -6,24 +6,21 @@
 
 <h1>Create</h1>
 
-<h4>Notas</h4>
+<h4>Curso</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Alumno" class="control-label"></label>
-                <select asp-for="IdAlumno" class="form-control" asp-items="ViewBag.Alumnos"></select>
+                <label asp-for="Nombre" class="control-label"></label>
+                <input asp-for="Nombre" class="form-control" />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Curso" class="control-label"></label>
-                <select asp-for="IdCurso" class ="form-control" asp-items="ViewBag.Cursos"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nota" class="control-label"></label>
-                <input asp-for="Nota" class="form-control" />
-                <span asp-validation-for="Nota" class="text-danger"></span>
+                <label asp-for="Docente" class="control-label"></label>
+                <input asp-for="Docente" class="form-control" />
+                <span asp-validation-for="Docente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
