--- a/Solution/WEBAPP/Views/Notas/Edit.cshtml
+++ b/Solution/WEBAPP/Views/Notas/Edit.cshtml
@@ -14,13 +14,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdNota" />
             <div class="form-group">
-                <label asp-for="IdAlumno" class="control-label"></label>
-                <select asp-for="IdAlumno" class="form-control" asp-items="ViewBag.IdAlumno"></select>
+                <label asp-for="Alumno" class="control-label"></label>
+                <select asp-for="IdAlumno" class="form-control" asp-items="ViewBag.Alumnos" disabled></select>
                 <span asp-validation-for="IdAlumno" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdCurso" class="control-label"></label>
-                <select asp-for="IdCurso" class="form-control" asp-items="ViewBag.IdCurso"></select>
+                <label asp-for="Curso" class="control-label"></label>
+                <select asp-for="IdCurso" class="form-control" asp-items="ViewBag.Cursos" disabled></select>
                 <span asp-validation-for="IdCurso" class="text-danger"></span>
             </div>
             <div class="form-group">
