--- a/Solution/WEBAPP/Views/Shared/_Layout.cshtml
+++ b/Solution/WEBAPP/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Alumno" asp-action="Index">Alumno</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Curso" asp-action="Index">Curso</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Notas" asp-action="Index">Notas</a>
                         </li>
                         <li class="nav-item">
